k8/dummy-app-4/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-app-4
  namespace: dummy-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-app-4
  template:
    metadata:
      labels:
        app: dummy-app-4
    spec:
      serviceAccountName: external-secrets-sa
      containers:
        - name: dummy-app-4
          image: >-
            us-east4-docker.pkg.dev/plateng-dev-app-wsky/idp-dev/dummy-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7007
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
