k8/dummy-app-4/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-app-4
  namespace: dummy-dev
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/load-balancer-type: External
spec:
  selector:
    app: dummy-app-4
  ports:
    - name: http
      protocol: TCP
      port: 7007
      targetPort: 7007
  type: ClusterIP
