k8/dummy-app-4/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dummy-app-4-vs
  namespace: dummy-dev
spec:
  hosts:
    - dummy-app-1.dev.wellsky.cloud
  gateways:
    - plateng-dev-gke-01-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: dummy-app-4.dummy-dev.svc.cluster.local
            port:
              number: 80
